src/unpackaged/post/new - installation/08_redu_object_tracking/objects/rio_ed__Session__c.object
<CustomObject>
    <fields>
        <fullName>rio_ed__Attendance_for_completion__c</fullName>
        <label>Attendance % for completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rio_ed__Booked_Places__c</fullName>
        <inlineHelpText>Number of places booked for this session (set by the system)</inlineHelpText>
        <label>Booked Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rio_ed__Mandatory_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rio_ed__Primary_Faculty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Faculty</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rio_ed__Status__c</fullName>
        <label>Booking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Create/Update Bookings</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Booked with Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>